--- a/OEBPS/Styles/stylesheet.css
+++ b/OEBPS/Styles/stylesheet.css
@@ -162,3 +162,8 @@ table td {
   border: #b9ccf9 1px solid;
   letter-spacing: 0;
 }
+.font-img {
+  border: 0;
+  vertical-align: middle;
+  height: 17.6px;
+}
