--- a/OEBPS/Styles/stylesheet.css
+++ b/OEBPS/Styles/stylesheet.css
@@ -167,3 +167,8 @@ table td {
   vertical-align: middle;
   height: 17.6px;
 }
+.font-zhu-img {
+  border: 0;
+  vertical-align: middle;
+  height: 12px;
+}
